.github/scripts/tests/fixtures/api-impl-006/pass/swift-array-primitives/Sources/Array Primitives/Array.Dynamic.swift
// File name `Array.Dynamic.swift` correctly mirrors the nested type
// path `Array.Dynamic` per [API-IMPL-006].

extension Array {
    public struct Dynamic {
        public init() {}
    }
}
