.github/scripts/tests/fixtures/api-impl-006/fail/swift-bad-naming/Sources/Bad Module/DynamicArray.swift
// File name `DynamicArray.swift` does not match the declared full type path
// `Array.Dynamic` — VIOLATION of [API-IMPL-006].

extension Array {
    public struct Dynamic {
        public init() {}
    }
}
